app/src/main/java/com/example/calcomanias_rocket/app/errors/ResourceNotFoundErrorUiModel.kt
package com.example.calcomanias_rocket.app.errors

class ResourceNotFoundErrorUiModel(private val onClick: (() -> Unit)? = null) : ErrorUiModel {
}